# hdx-scraper-idmc-idu

./: .coveragerc  .pre-commit-config.yaml  CLAUDE.md  README.md  country_dates.txt  hatch.toml  idmc.py  pyproject.toml  requirements-test.txt  requirements.txt  run.py  test-requirements.txt
.github/workflows/: publish.yaml  run-python-script.yaml  run-python-script.yml
config/: hdx_dataset_static.yml  hdx_resource_view_static.yml  project_configuration.yaml  project_configuration.yml
src/hdx/scraper/idmc/idu/: __main__.py  pipeline.py
src/hdx/scraper/idmc/idu/config/: IDMC_territories.csv  hdx_dataset_static.yaml  project_configuration.yaml
tests/: conftest.py  test_idmc.py
tests/fixtures/: event_data_AFG.csv  event_data_IND.csv  idmc_idu.json  ind_idmc_idu_events.csv
