#########################
# Project Configuration #
#########################

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hdx-scraper-idmc-idu"
requires-python = ">=3.8"
dependencies = [
  "hdx-python-api>= 6.6.3",
  "hdx-python-country>= 4.0.1",
  "hdx-python-utilities>= 4.0.3",
]

dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/OCHA-DAP/hdx-scraper-idmc-idu"

[project.optional-dependencies]
test = ["cydifflib", "pytest", "pytest-check", "pytest-cov"]
dev = ["pre-commit"]

[project.scripts]
run = "hdx.scraper.idmc.idu__main__:main"
